# htcondor-stubs

./: LICENSE  README.md  pyproject.toml  utils.py
classad-stubs/: __init__.pyi
htcondor-stubs/: __init__.pyi
src/classad-stubs/: __init__.pyi
src/classad2-stubs/: __init__.pyi
src/htcondor-stubs/: __init__.pyi
src/htcondor2-stubs/: __init__.pyi
